# sycamore-template

./: .gitignore  Cargo.toml  README.md
ex-project/: Cargo.toml  index.html
ex-project/src/: app.rs
ex-router-project/: Cargo.toml  index.html
ex-router-project/src/: app.rs  main.rs
sycamore-template/: Cargo.toml
sycamore-template/src/: lib.rs
sycamore-template/src/includes/: app.in  main.in
