[package]
name = "ex-router-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
sycamore-router = "0.9.0-beta.2"
wasm-bindgen = "0.2.92"
